# nanobind_opencv_exercise

./: .gitignore  .gitmodules  README.md
example/: example.py
simple_cv_process_pywrapper/: CMakeLists.txt  pyproject.toml  setup.py
simple_cv_process_pywrapper/src/: simple_cv_process_pywrapper_impl.cpp
simple_cv_process_pywrapper/src/simple_cv_process_pywrapper/: __init__.py
